CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(ZInfoTech)

IF(WIN32)
MESSAGE(STATUS "=========== WIN32 =================")
ELSEIF(UNIX)
MESSAGE(STATUS "=========== UNIX ==================")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -lpthread")
SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g -lpthread")
ADD_DEFINITIONS(-D_REENTRANT)
ELSEIF(APPLE)
MESSAGE(STATUS "============ APPLE =================")
ELSE(WIN32)
MESSAGE(STATUS "============ UNSUPPORT SYSTEM=======")
ENDIF(WIN32)

ADD_SUBDIRECTORY(src bin)
ADD_SUBDIRECTORY(tests)
