CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(ZInfoTech)

IF(WIN32)
MESSAGE(STATUS "=========== WIN32 =================")
ADD_DEFINITIONS(-DZSYS_WINDOWS)
ELSEIF(UNIX)
MESSAGE(STATUS "=========== UNIX ==================")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -lpthread -lrt")
SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g -lpthread -lrt")
ADD_DEFINITIONS(-D_REENTRANT)
ADD_DEFINITIONS(-DZSYS_POSIX)
ELSEIF(APPLE)
MESSAGE(STATUS "============ APPLE =================")
ADD_DEFINITIONS(-DZSYS_APPLE)
ELSE(WIN32)
MESSAGE(STATUS "============ UNSUPPORT SYSTEM=======")
ENDIF(WIN32)

ADD_SUBDIRECTORY(src bin)
ADD_SUBDIRECTORY(tests)
