INCLUDE_DIRECTORIES(..)
AUX_SOURCE_DIRECTORY(. LIBZ_SRC)
ADD_LIBRARY(z SHARED ${LIBZ_SRC})
ADD_LIBRARY(z_static STATIC ${LIBZ_SRC})

SET_TARGET_PROPERTIES(z_static PROPERTIES OUTPUT_NAME "z")

SET_TARGET_PROPERTIES(z PROPERTIES CLEAN_DIRECT_OUTPUT 1)
SET_TARGET_PROPERTIES(z_static PROPERTIES CLEAN_DIRECT_OUTPUT 1)

SET_TARGET_PROPERTIES(z PROPERTIES VERSION 1.0 SOVERSION 1)
