INCLUDE_DIRECTORIES(..)
AUX_SOURCE_DIRECTORY(. LIBZ_SRC)
ADD_LIBRARY(libzit SHARED ${LIBZ_SRC})
#ADD_LIBRARY(z_static STATIC ${LIBZ_SRC})

#SET_TARGET_PROPERTIES(z_static PROPERTIES OUTPUT_NAME "libzit")
SET_TARGET_PROPERTIES(libzit PROPERTIES OUTPUT_NAME "libzit")
SET_TARGET_PROPERTIES(libzit PROPERTIES CLEAN_DIRECT_OUTPUT 1)
#SET_TARGET_PROPERTIES(z_static PROPERTIES CLEAN_DIRECT_OUTPUT 1)

SET_TARGET_PROPERTIES(libzit PROPERTIES VERSION 1.0 SOVERSION 1)
